Update v4.0.0-pre1 examples to v4.0.0-pre2

--- a/v4.0.0-pre2/Discore.Samples.VoiceSending/Discore.Samples.VoiceSending/Discore.Samples.VoiceSending.csproj
+++ b/v4.0.0-pre2/Discore.Samples.VoiceSending/Discore.Samples.VoiceSending/Discore.Samples.VoiceSending.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discore" Version="4.0.0-pre1" />
+    <PackageReference Include="Discore" Version="4.0.0-pre2" />
+    <PackageReference Include="Nito.AsyncEx.Coordination" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
