--- a/v4.0.0/Discore.Samples.PingPong/Discore.Samples.PingPong/Discore.Samples.PingPong.csproj
+++ b/v4.0.0/Discore.Samples.PingPong/Discore.Samples.PingPong/Discore.Samples.PingPong.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discore" Version="4.0.0-pre2" />
+    <PackageReference Include="Discore" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
