--- a/v4.0.0/Discore.Samples.VoiceSending/Discore.Samples.VoiceSending/Discore.Samples.VoiceSending.csproj
+++ b/v4.0.0/Discore.Samples.VoiceSending/Discore.Samples.VoiceSending/Discore.Samples.VoiceSending.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discore" Version="4.0.0-pre2" />
+    <PackageReference Include="Discore" Version="4.0.0" />
     <PackageReference Include="Nito.AsyncEx.Coordination" Version="1.0.2" />
   </ItemGroup>
 
